Fixing skills section on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -498,7 +498,7 @@ li {
     .technology-section {
         text-align: center;
         padding: 20px;
-        height: 180vh;
+        height: 150vh;
     }
 
     .skills-container {
